binrw/tests/ui/named_args_unsupported_type_union.stderr
error: only structs are supported
 --> $DIR/named_args_unsupported_type_union.rs:5:1
  |
5 | / union Foo {
6 | |     a: i32,
7 | | }
  | |_^
