binrw/tests/ui/named_args_unsupported_type_union.rs
#![feature(generic_associated_types)]
use binrw::BinrwNamedArgs;

#[derive(BinrwNamedArgs)]
union Foo {
    a: i32,
}

fn main() {}
